--- a/src/main/resources/com/example/fakemoncreator/deleteAbility-view.fxml
+++ b/src/main/resources/com/example/fakemoncreator/deleteAbility-view.fxml
@@ -13,7 +13,7 @@
 
     <Label layoutX="95" layoutY="40" text="Select the ability you would like to delete, then"/>
     <Label layoutX="135" layoutY="55" text="click the Delete Ability button."/>
-    <Label layoutX="85" layoutY="80" text="Note: You can only delete abilities that you created"/>
+    <Label fx:id="output" layoutX="85" layoutY="80" text="Note: You can only delete abilities that you created"/>
 
     <ComboBox fx:id="abilityBox" layoutX="90" layoutY="110" prefWidth="260"/>
 
